# newsreader

./: .gitignore  CHANGELOG.md  LICENSE  README.md  cabal.project  newsreader.cabal  newsreader.db
app/: Main.hs  ParseFeed.hs
src/: Db.hs  FetchFeed.hs  ParseFeed.hs  ParseNews.hs  TuiApp.hs
