cabal-version:      3.0
name:               newsreader

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Isak Hansen

category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable newsreader
    import:           warnings

    main-is:          Main.hs

    other-modules:    ParseFeed
										, TuiApp
										, FetchFeed


    build-depends:    base ^>=4.18.3.0
										, text
										, megaparsec
										, brick
										, feed
										, time
										, vty
										, microlens-mtl
										, process
										, http-conduit
										, bytestring
										, http-client
										, http-client-tls

    -- Directories containing source files.
    hs-source-dirs:   app
										, src

    -- Base language which the package is written in.
    default-language: GHC2021
