cabal-version:      3.0
name:               newsreader

version:            0.1.0.0

license:            BSD-3-Clause

license-file:       LICENSE

author:             Isak Hansen

category:           Data
build-type:         Simple

extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall -threaded

executable newsreader
    import:           warnings

    main-is:          Main.hs

    other-modules:    ParseFeed
										, TuiApp
										, FetchFeed
										, Db


    build-depends:    base >=4.16 && <5
										, text
										, brick
										, feed
										, time
										, vty
										, microlens
										, microlens-mtl
										, process
										, http-conduit
										, bytestring
										, http-client
										, selda
										, selda-sqlite

    -- Directories containing source files.
    hs-source-dirs:   app
										, src

    -- Base language which the package is written in.
    default-language: GHC2021
